SEBSERV-417 fix check full integration available and fix Exam Config change apply